--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#container {
+  height: 100vh;
+  width: 100vw;
+  background-color: #141414;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#appContainer {
+  display: flex;
+  gap: 25px;
+}
+#boxContainer {
+  position: relative;
+  height: 500px;
+  width: 500px;
+  border-radius: 10px;
+  border: none;
+  background: linear-gradient(135deg, #e09, #d0e);
+}
+#box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100px;
+  width: 100px;
+  border-radius: 10px;
+  border: none;
+  z-index: 9001;
+  background-color: white;
+}
+#controls {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  color: white;
+  font-size: 22px;
+}
+#xDiv {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+#yDiv {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+#rotateDiv {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.stats {
+  position: absolute;
+  left: 0;
+}
+
+#scrollBarX {
+  position: relative;
+  left: 100px;
+  height: 8px;
+  width: 250px;
+  margin-left: 15px;
+
+  display: flex;
+  align-items: center;
+
+  border-radius: 10px;
+  border: none;
+  background-color: white;
+}
+#scrollFillX {
+  height: 100%;
+  width: 0px;
+  position: absolute;
+  left: 0;
+  background-color: #0668f9;
+}
+#scrollDotX {
+  position: absolute;
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  border: none;
+  background-color: #0668f9;
+  z-index: 9999;
+}
+
+#scrollBarY {
+  position: relative;
+  left: 100px;
+  height: 8px;
+  width: 250px;
+  margin-left: 15px;
+
+  display: flex;
+  align-items: center;
+
+  border-radius: 10px;
+  border: none;
+  background-color: white;
+}
+#scrollFillY {
+  height: 100%;
+  width: 0px;
+  position: absolute;
+  left: 0;
+  background-color: #0668f9;
+}
+#scrollDotY {
+  position: absolute;
+  left: 0;
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  border: none;
+  background-color: #0668f9;
+}
+
+#scrollBarRotate {
+  position: relative;
+  left: 100px;
+  height: 8px;
+  width: 250px;
+  margin-left: 15px;
+
+  display: flex;
+  align-items: center;
+
+  border-radius: 10px;
+  border: none;
+  background-color: white;
+}
+#scrollFillRotate {
+  height: 100%;
+  width: 0px;
+  position: absolute;
+  left: 0;
+  background-color: #0668f9;
+}
+#scrollDotRotate {
+  position: absolute;
+  left: 0;
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  border: none;
+  background-color: #0668f9;
 }
